# Uni

./: README.md
Bioinformatics/: pyvenv.cfg  readme.md
Bioinformatics/Data/: Algo04_subtiles_motiv.txt  Algo05_subtiles_motiv_mini.txt  NFKappaB-Matrix.txt  genom_Thermotoga_petrophila.fasta
Bioinformatics/General/: general_helper.py  hamming_distance.py  matrix_helper.py  parse_input_files.py
Bioinformatics/Global_Alignment_Branch_and_Bound/: global_alignment_with_bb.py  readme.md
Bioinformatics/Project/: bb_alignment.py  global_alignment_with_bb.py  input.txt  log.txt  readme.md  task.md
CV/Lab02/: vector_algebra.py
CV/Lab05/: RANSAC.ipynb  loss_function.py  test.ipynb
CV/Lab06/: SimpleKNN.py
CV/Lab07/: simple-image-classificator.ipynb
Computer_Vision/Lab02/: exc03.py
Computer_Vision/Lab03/: Ex01.py  Ex02.py  Ex05-homography.py
Computer_Vision/Lab06/: MNIST.py
Computer_Vision/Lab08/: code.py
DS/: readme.txt
GIS/: CMakeLists.txt
GIS/src/: EBO.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main  main.cpp  texture.cpp  texture.h
GML/Lab01/: MachineLearningExamples.md  csv_parser.py  uebung03.csv
GML/Lab02/: 1_Merkmalsarten.md
GML/Lab03/: cross_validation.py
ImageProcessing/project/: CMakeLists.txt  test.cpp
Image_Processing/Dithering/: CMakeLists.txt
KI2/questions/: week1_questions_schuster.txt
Linux_Scripting/: exam_check.md
Robotics/: .~lock.agilex_project_doc.odt#  agilex_project_doc.odt  person_tracker.py  yolo_test.py
SeqAlg/: setup.py
SeqAlg/Lab1/: transcribe.py
Shup/: shup2024-Schuster-Rinaldo.tar
(+268 files in other folders)
